--- a/frontend/auth/register.html
+++ b/frontend/auth/register.html
@@ -27,25 +27,35 @@
       <div class="auth-form">
         <h1 class="auth-title">Create Your Account</h1>
 
-        <form id="registerForm">
+        <form id="registerForm" novalidate>
           <div class="field">
             <label for="fullName">Full Name</label>
-            <input id="fullName" type="text" placeholder="Enter your full name" required />
+            <input id="fullName" type="text" placeholder="Enter your full name" required minlength="3"
+              maxlength="30"
+              pattern="^[A-Za-z][A-Za-z\s]{1,58}$"
+              title="Full name should be at least 3 characters, letters and spaces only."
+              
+            />
           </div>
 
           <div class="field">
             <label for="email">Email Address</label>
-            <input id="email" type="email" placeholder="Enter your email address" required />
+            <input id="email" type="email" placeholder="Enter your email address" required maxlength="50"
+             />
           </div>
 
           <div class="field">
             <label for="password">Password</label>
-            <input id="password" type="password" placeholder="Enter your password" required />
+            <input id="password" type="password" placeholder="Enter your password" required  minlength="8"
+              maxlength="15"
+              autocomplete="new-password" />
           </div>
 
           <div class="field">
             <label for="confirmPassword">Confirm Password</label>
-            <input id="confirmPassword" type="password" placeholder="Confirm your password" required />
+            <input id="confirmPassword" type="password" placeholder="Confirm your password" required  minlength="8"
+              maxlength="15"
+              autocomplete="new-password"/>
           </div>
 
           <button type="submit" class="btn-primary">Create Account</button>
